solve align

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,15 @@
 
 }
 
+@media (max-width: 880px) {
+  .sub-heading {
+    font-size: 32px;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: left;
+  }
+}
+
 @media (max-width: 480px) {
   .sub-heading {
     font-size: 32px;
@@ -68,6 +77,14 @@
   padding-right: 20%;
 }
 
+@media (max-width: 880px) {
+  .paragraph1 {
+    font-size: 14px;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
 @media (max-width: 480px) {
   .paragraph1 {
     font-size: 14px;
@@ -85,6 +102,14 @@
   text-align: justify;
   font-weight: 400;
   line-height: 150%;
+}
+
+@media (max-width: 880px) {
+  .paragraph2 {
+    font-size: 14px;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 @media (max-width: 480px) {
@@ -117,6 +142,7 @@
   background-color: white; /* Set the background color for the about section */
   padding: 10%;
   text-align: center;
+  height: 100%;
 }
 
 .chart-container {
