--- a/src/FeatureCard.css
+++ b/src/FeatureCard.css
@@ -1,6 +1,7 @@
 .feature-card {
   display: flex;
-  width: 720px;
+  padding-left: 20%;
+  padding-right: 20%;
   /* height: 222px; */
   flex-direction: column;
   flex-shrink: 0;
@@ -9,8 +10,9 @@
 }
 
 .feature-card__dialogue {
+  width: 480px;
   color: var(--white, #FFF);
-  text-align: justify;
+  text-align: left;
   /* Body 1/Desktop/Regular */
   font-size: 14px;
   font-family: 'IBM Plex Sans Thai', sans-serif;
@@ -53,7 +55,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: 150%;
-  text-align: left;
+  text-align:left;
   margin-bottom: 0;
   padding-top: 7%;
 }
@@ -74,29 +76,33 @@
   align-items: end;
 }
 
-.right-aligned .feature-card__dialogue {
-  text-align: end;
-  align-items: end;
+.right-aligned .feature-card__image-container {
+  order: 1;
+  padding-right: 0%;
+  padding-left: 5%;
 }
-
 
 .right-aligned .feature-card__image-container {
   align-items: end;
 }
 
-.right-aligned .feature-card__profile-content {
+.right-aligned .feature-card__dialogue, .right-aligned  .feature-card__profile-content,.right-aligned  .feature-card__name ,.right-aligned  .feature-card__position{
   text-align: end;
   align-items: end;
 }
 
-.right-aligned .feature-card__name{
-  text-align: end;
-  align-items: end;
-}
-
-.right-aligned .feature-card__position {
-  text-align: end;
-  align-items: end;
+@media (max-width: 880px) {
+  .feature-card {
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    padding-top: 10%;
+    padding-bottom: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 @media (max-width: 480px) {
@@ -106,8 +112,10 @@
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    margin: auto;
+    padding-top: 10%;
     padding-bottom: 30%;
+    padding-left: 0%;
+    padding-right: 0%;
   }
 
   .feature-card__image-container {
@@ -123,10 +131,10 @@
   }
 
   .feature-card__dialogue {
-    padding-bottom: 0;
+    width: 100%;
     text-align: center;
     align-items: center;
-    padding-bottom: 2%;
+    padding-bottom: 5%;
   }
 
   .feature-card__name,
@@ -135,5 +143,22 @@
     text-align: center;
     align-items: center;
     
+  }
+  .right-aligned {
+    text-align: center;
+    align-items: center;
+  }
+  
+  .right-aligned .feature-card__image-container {
+    order: 0;
+  }
+  
+  .right-aligned .feature-card__image-container {
+    align-items: center;
+  }
+  
+  .right-aligned .feature-card__dialogue,.feature-card__profile-content,.feature-card__name , .feature-card__position{
+    text-align: center;
+    align-items: center;
   }
 }
